fixed white space issue

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -25,13 +25,21 @@ LightGreen - #c9dcd5
 }
 
 
-body {
+body{
     margin: 0;
+    min-height: 100vh;
+}
+
+#app {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .page {
     padding: 10px;
     background-color: var(--lightGreen);
+    flex: 1;
 }
 
 h1, h2, h3 {
